versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/DoubleDifferentialCrossSection.f03


!! Get
function DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_coherentElasticGet(handle) &
      bind(C, name='DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_coherentElasticGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_coherentElasticGet

!! Set
subroutine DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_coherentElasticSet(handle, fieldHandle) &
      bind(C, name='DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_coherentElasticSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_coherentElasticSet


!! -----------------------------------------------------------------------------
!! Child: thermalNeutronScatteringLaw_incoherentElastic
!! -----------------------------------------------------------------------------

!! Has
function DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentElasticHas(handle) &
      bind(C, name='DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentElasticHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentElasticHas

!! Get, const
function DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentElasticGetConst(handle) &
      bind(C, name='DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentElasticGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentElasticGetConst

!! Get
function DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentElasticGet(handle) &
      bind(C, name='DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentElasticGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentElasticGet

!! Set
subroutine DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentElasticSet(handle, fieldHandle) &
      bind(C, name='DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentElasticSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentElasticSet


!! -----------------------------------------------------------------------------
!! Child: thermalNeutronScatteringLaw_incoherentInelastic
!! -----------------------------------------------------------------------------

!! Has
function DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentInelasticHas(handle) &
      bind(C, name='DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentInelasticHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentInelasticHas

!! Get, const
function DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentInelasticGetConst(handle) &
      bind(C, name='DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentInelasticGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentInelasticGetConst

!! Get
function DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentInelasticGet(handle) &
      bind(C, name='DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentInelasticGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentInelasticGet

!! Set
subroutine DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentInelasticSet(handle, fieldHandle) &
      bind(C, name='DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentInelasticSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine DoubleDifferentialCrossSectionThermalNeutronScatteringLaw_incoherentInelasticSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalDoubleDifferentialCrossSection
